@@ -714,6 +714,11 @@ class TextTranslator(nodes.NodeVisitor):
     def depart_inline(self, node):
         pass
 
+    def visit_container(self, node):
+        pass
+    def depart_container(self, node):
+        pass
+
     def visit_problematic(self, node):
         self.add_text('>>')
     def depart_problematic(self, node):
